--- a/website/package.json
+++ b/website/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "polymarket-viewer",
-  "private": true,
-  "version": "0.0.0",
+  "name": "leet-quantum-terminal",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,11 +9,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "chart.js": "^4.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8"
   }
