--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
+    "ethers": "^6.16.0",
+    "express": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
