--- a/.env.example
+++ b/.env.example
@@ -53,8 +53,13 @@ SCRAPER_USER_AGENT=LeetTerminal/1.0
 SCRAPER_RATE_LIMIT=100
 SCRAPER_CACHE_TTL=3600
 
-# External API Keys
+# External API Keys and URLs
 POLYMARKET_API_KEY=
+POLYMARKET_API_URL=https://gamma-api.polymarket.com
+
+NEWS_API_KEY=
+NEWS_API_URL=https://newsapi.org/v2
+
 KALSHI_API_KEY=
 PARALLEL_AI_API_KEY=
 
@@ -67,3 +72,6 @@ METRICS_PORT=9090
 # Storage Configuration
 UPLOAD_MAX_SIZE=10485760
 STORAGE_PATH=/var/lib/leet-terminal/data
+
+# Frontend Configuration (for Vite build)
+VITE_API_URL=http://localhost:8080
