feat(db): add news sources migration and default data
- Create migration scripts for news sources table and related article fields.
- Implement down migration to remove news sources and clean up articles.
- Add default public news sources to the database.
- Update Docker Compose files for development and production environments.
- Introduce health checks and environment variable configurations for services.
- Add Dockerfiles for API, scraper, analyzer, modeler, and web frontend.
- Restructure web frontend components and services for better organization.
- Enhance NewsSourcesPanel to include optional API key input for sources.

--- a/deploy/docker-compose.dev.yml
+++ b/deploy/docker-compose.dev.yml
@@ -60,6 +60,7 @@ services:
       REDIS_PASSWORD: ""
       ASYNQ_REDIS_ADDR: redis:6379
       JWT_SECRET: dev_jwt_secret_key_for_testing_only
+      ENCRYPTION_KEY: dev-key-32-bytes-change-prod!!
       CORS_ORIGINS: http://localhost:5173,http://localhost:3000,http://localhost:80,http://localhost
       LOG_LEVEL: debug
       STORAGE_PATH: /var/lib/leet-terminal/data
@@ -100,6 +101,7 @@ services:
       REDIS_PASSWORD: ""
       ASYNQ_REDIS_ADDR: redis:6379
       ASYNQ_CONCURRENCY: 5
+      ENCRYPTION_KEY: dev-key-32-bytes-change-prod!!
       SCRAPER_MAX_CONCURRENT: 5
       LOG_LEVEL: debug
     depends_on:
