--- a/deploy/docker/Dockerfile.api
+++ b/deploy/docker/Dockerfile.api
@@ -4,7 +4,7 @@ FROM golang:1.21-alpine AS builder
 # Install build dependencies
 RUN apk add --no-cache git make
 
-WORKDIR /app
+WORKDIR /app/app
 
 # Copy go mod files
 COPY go.mod go.sum ./
@@ -36,4 +36,4 @@ EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
 
-CMD ["./api"]
+CMD ["air", "-c", "/app/app/.air.api.toml"]
