--- a/deploy/docker/Dockerfile.modeler
+++ b/deploy/docker/Dockerfile.modeler
@@ -3,14 +3,13 @@ FROM golang:1.21-alpine AS builder
 
 RUN apk add --no-cache git make
 
-WORKDIR /app
+WORKDIR /app/app
 
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
-
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o /app/bin/modeler ./cmd/modeler
+COPY deploy/ .
+RUN go install github.com/cosmtrek/air@latest
 
 # Runtime stage
 FROM alpine:latest
@@ -21,4 +20,4 @@ WORKDIR /root/
 
 COPY --from=builder /app/bin/modeler .
 
-CMD ["./modeler"]
+CMD ["air", "-c", "/app/app/.air.modeler.toml"]
