--- a/deploy/docker/Dockerfile.scraper
+++ b/deploy/docker/Dockerfile.scraper
@@ -3,14 +3,13 @@ FROM golang:1.21-alpine AS builder
 
 RUN apk add --no-cache git make
 
-WORKDIR /app
+WORKDIR /app/app
 
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
-
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o /app/bin/scraper ./cmd/scraper
+COPY deploy/ .
+RUN go install github.com/cosmtrek/air@latest
 
 # Runtime stage
 FROM alpine:latest
@@ -24,4 +23,4 @@ COPY --from=builder /app/bin/scraper .
 # Set Chrome path for chromedp if needed
 ENV CHROME_PATH=/usr/bin/chromium-browser
 
-CMD ["./scraper"]
+CMD ["air", "-c", "/app/app/.air.scraper.toml"]
