feat: Add Parallel.ai deep research integration
## New Features

### Parallel.ai API Integration
- New /services/parallelAPI.js with full API support
- Research methods:
  - researchMarket() - Deep market analysis with probability assessment
  - factCheck() - Verify claims with evidence
  - getLatestNews() - Topic-specific news with sentiment
  - researchEntity() - Company/person research
  - compareOutcomes() - Multi-outcome analysis
  - customResearch() - Free-form queries

### Research Panel
- New /components/panels/ResearchPanel.jsx
- Tabbed interface: Overview, Factors, News, Sources
- Shows probability assessment with confidence
- Key factors and risk factors
- Recent news with relevance
- Citations with links to sources
- Cached results indicator
- Custom query support

### UI Integration
- New 'RESEARCH' workspace tab
- 2-column layout with market overview
- Seamless integration with market selection

### Environment
- Added VITE_PARALLEL_API_KEY to .env.example
- Graceful fallback when not configured

--- a/website/.env.example
+++ b/website/.env.example
@@ -18,6 +18,13 @@
 # VITE_GNEWS_API_KEY=your_gnews_key_here
 
 # ============================================
+# Parallel.ai Deep Research (optional)
+# ============================================
+# Get an API key from https://parallel.ai
+# Enables deep research, fact-checking, and entity analysis
+# VITE_PARALLEL_API_KEY=your_parallel_key_here
+
+# ============================================
 # Supabase (optional - for auth and data storage)
 # ============================================
 # Get these from your Supabase project settings
