Refactor database layer: Introduce Adapter pattern for DB interactions
- Moved Coordinator package to services/coordinator.
- Created a new Adapter struct in services/db to implement the storage.DB interface.
- Added PostgresUserRepo and TimescaleRepo for user, news, bet, and wallet management.
- Implemented connection handling and SQL execution functions in services/db/handler.go.
- Updated SQL initialization scripts for PostgreSQL and TimescaleDB to create necessary tables.
- Created migration scripts for user and wallet tables.
- Refactored storage models and repository interfaces for better abstraction.
- Simplified PostgresUserHandler and TimescaleHandler to use repository interfaces.

--- a/deploy/docker-compose.db.yml
+++ b/deploy/docker-compose.db.yml
@@ -12,6 +12,7 @@ services:
       - "5433:5432"
     volumes:
       - timescale_data:/var/lib/postgresql/data
+      - ../../services/db/migrations/timescaledb_migration_001.sql:/docker-entrypoint-initdb.d/01_timescaledb_migration.sql:ro
     restart: unless-stopped
 
   postgres:
@@ -25,6 +26,7 @@ services:
       - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ../../services/db/migrations/postgres_users_migration_001.sql:/docker-entrypoint-initdb.d/01_postgres_migration.sql:ro
     restart: unless-stopped
 
 volumes:
