--- a/deploy/docker-compose.dev.yml
+++ b/deploy/docker-compose.dev.yml
@@ -1,4 +1,3 @@
-project: leet-terminal
 services:
   db:
     extends:
@@ -35,6 +34,7 @@ services:
   web:
     # Development web service: run Vite dev server in a Node container
     image: node:20-alpine
+    container_name: leet-terminal-web
     env_file:
       - .env
     environment:
@@ -44,7 +44,7 @@ services:
       - "5173"
     volumes:
       - ../web:/app/web
-      - /app/web/node_modules
+      - web_node_modules:/app/web/node_modules
     command: sh -c "ls -la /app && ls -la /app/web || true; cat /app/web/package.json || true; npm install && npm run dev -- --host 0.0.0.0"
     depends_on:
       - app
@@ -114,6 +114,8 @@ volumes:
     name: leet-terminal_timescale_data
   rabbitmq_data:
     name: leet-terminal_rabbitmq_data
+  web_node_modules:
+    name: leet-terminal_web_node_modules
 
 networks:
   internal:
