--- a/deploy/gateway.dev.conf
+++ b/deploy/gateway.dev.conf
@@ -9,6 +9,15 @@ events {
 }
 
 http {
+    # allow websocket upgrade handling
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
+    # Development CORS defaults - permissive for localhost testing
+    # These are intentionally broad for local development only
+    set $cors_allow_origin '*';
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     sendfile        on;
@@ -18,12 +27,29 @@ http {
         listen 80;
         server_name localhost;
 
+        # API proxy - includes CORS and WebSocket upgrade headers for dev
         location /api/ {
+            # Handle preflight
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_allow_origin always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept' always;
+                add_header 'Access-Control-Max-Age' 1728000 always;
+                return 204;
+            }
+
             proxy_pass http://app:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            add_header 'Access-Control-Allow-Origin' $cors_allow_origin always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept' always;
         }
 
         location /app/ {
